# shakenfist

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .stestr.conf  404.html  AUTHORS  BRANCHES.rst  CNAME  ChangeLog  DEVELOPER.md  Jenkinsfile  Jenkinsfile-ci-debian  Jenkinsfile-ci-ubuntu-2004  Jenkinsfile-debian-10  Jenkinsfile-debian-10-localhost  Jenkinsfile-debian-10-singleton-etcd  Jenkinsfile-debian-10-slim-primary  Jenkinsfile-debian-10-thick-primary  Jenkinsfile-debian-11-slim-primary  Jenkinsfile-ubuntu-2004  Jenkinsfile-ubuntu-2004-localhost  Jenkinsfile-ubuntu-2004-slim-primary  README.md  RELEASE.md  YEAH-NAH  cleanup.sh  config.py  daemon.py  dhcp.py  example.tf  index.html  mkdocs.yml  net.py  network-example.dia  pyproject.toml  release.sh  renovate.json  requirements.txt  setup.cfg  setup.py  (+7 more)
deploy/: .stestr.conf  README.md  ansiblemoduletests.sh  getsf  install  install.sh  nodelifecycletests.sh  requirements.txt  requirements.yml  setup.cfg  setup.py  test-requirements.txt  test_api.py  tox.ini  uninstall
deploy/ansible/: ansible.cfg  ci-dependencies.yml  ci-gather-logs.yml  ci-image.yml  ci-include-common-localhost.yml  ci-include-common-primary.yml  ci-include-common-sfnodes.yml  ci-include-multinode-localhost.yml  ci-include-multinode-sfnodes.yml  ci-include-singlenode-localhost.yml  ci-topology-localhost-released.yml  ci-topology-localhost-upgrade.yml  ci-topology-localhost.yml  ci-topology-singleton-etcd.yml  ci-topology-slim-primary-released.yml  ci-topology-slim-primary.yml  ci-topology-thick-primary.yml  ci.yml  deploy.py  deploy.sh  deploy.yml  deployandtest.sh  hosts  library  test.yml
deploy/ansible-ci/: pretest.yml  schedulertest.py  terraform
deploy/ansible-ci/tests/: _setup.yml  _util_instance_pause.yml  _util_instance_reboot.yml  _util_instance_start.yml  _util_network_cirros_validate.yml  library  test_cloudinit.yml  test_diskspecs.yml  test_final.yml  test_instances_start_with_dhcp_correct.yml  test_networking.yml  test_state_changes.yml  tests-that-fail.yml
deploy/ansible/files/: apache-site-hypervisor.conf  apache-site-primary.conf  config  dhcp.tmpl  glusterd.vol  inventory.yaml  libvirt.tmpl  netplan-eth1.yaml  rsyslog-client-01-sf.conf  rsyslog-server-01-sf.conf  sf.service  sfrc  shakenfist.json  usr.lib.libvirt.virt-aa-helper
deploy/ansible/includes/: ansible.yml  debian.yml  glusterfs-all-final.yml  glusterfs-all-initial.yml  glusterfs-primary.yml  grafana.yml  python3.yml  topology_add_node.yml
deploy/ansible/tasks/: build-wheel.yml  distro-check.yml
deploy/ansible/vars/: main.yml
deploy/ansible_module_ci/: 001.yml  002.yml  003.yml  004.yml  005.yml
deploy/shakenfist_ci/: README.md  base.py
deploy/shakenfist_ci/tests/: test_agent.py  test_artifacts.py  test_auth.py  test_boot.py  test_cache_image.py  test_centos.py  test_cirros.py  test_cloudinit.py  test_commandline.py  test_commandline_artifacts.py  test_commandline_network.py  test_console_log.py  test_debian.py  test_disk_specs.py  test_disks.py  test_floating_ips.py  (+17 more)
(+522 files in other folders)
