[metadata]
name = shakenfist
summary = Shaken Fist: an opinionated minimal cloud
description-file = README.md
author = Michael Still
author-email = mikal@stillhq.com
home-page = https://madebymikal.com/shakenfist
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    shakenfist