[metadata]
name = shakenfist
summary = Shaken Fist: an opinionated minimal cloud
license = Apache2
description-file = README.md
author = Michael Still
author-email = mikal@stillhq.com
home-page = https://madebymikal.com/shakenfist
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    shakenfist

[entry_points]
console_scripts =
    sf-daemon = shakenfist.daemons.main:main
    sf-client = shakenfist.client.main:cli
    sf-networkexplainer = shakenfist.client.networkexplainer:main
    sf-passwd = shakenfist.client.passwd:main
    sf-upgrade = shakenfist.client.upgrade:main

[pbr]
skip_changelog = True
