[metadata]
name = shakenfist
summary = Shaken Fist: an opinionated minimal cloud
license = Apache2
description-file = README.md
author = Michael Still
author_email = mikal@stillhq.com
home_page = https://madebymikal.com/shakenfist
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[files]
packages =
    shakenfist

[entry_points]
console_scripts =
    sf-daemon = shakenfist.daemons.main:main
    sf-daemon-shim = shakenfist.daemons.shim:main
    sf-ctl = shakenfist.client.ctl:cli
    sf-backup = shakenfist.client.backup:cli

[pbr]
skip_changelog = True
