[metadata]
name = shakenfist_ci
summary = Shaken Fist CI: test and validation for Shaken Fist
license = Apache2
author = Michael Still
author-email = mikal@stillhq.com
home-page = https://madebymikal.com/shakenfist
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    shakenfist_ci

[entry_points]

[pbr]
skip_changelog = True
